--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
   </div>
 
+  <canvas id="canvas" style="display:none;"></canvas>
+
   <div id="outputContainer">
     <h2>Extracted Numbers</h2>
     <pre id="output"></pre>
