--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OCR Numbers Only</title>
+  <title>TABLE READER LL</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Upload or Paste Image for OCR</h1>
+  <h1>Upload or Paste Image to Process</h1>
+  <p class="subtitle">For consistency, please upload one column of data at a time. Try to make the image as clear and large as possible with a bit of blank space on the borders for a clearer read..</p>
 
   <div class="upload-area">
     <label for="imageInput" class="upload-button">Choose Image</label>
     <input type="file" id="imageInput" accept="image/*" hidden />
 
     <div id="pasteZone" class="paste-zone" tabindex="0">
-      <p><strong>Paste your screenshot here (Ctrl+V)</strong></p>
+      <p><strong>Or paste your screenshot here (Ctrl+V)</strong></p>
     </div>
   </div>
 
