--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Upload or Paste Image to Process</h1>
-  <p class="subtitle">For consistency, please upload one column of data at a time. Try to make the image as clear and large as possible with a bit of blank space on the borders for a clearer read..</p>
+  <p class="subtitle">Upload one column of data at a time. Try to make the image AS CLEAR AND LARGE AS POSSIBLE with a bit of blank space on the borders for a clearer read. Double-check the reads - this program is NOT perfect.</p>
 
   <div class="upload-area">
     <label for="imageInput" class="upload-button">Choose Image</label>
