--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Upload or Paste Image to Process</h1>
-  <p class="subtitle">Upload one column of data at a time (NUMBERS ONLY). Make the image AS CLEAR AND LARGE AS POSSIBLE with some blank space on the borders for a better read. Double-check the ouput - this program is NOT perfect.</p>
+  <p class="subtitle">Upload ONE column of data at a time (NUMBERS ONLY). Make the image AS CLEAR AND LARGE AS POSSIBLE with some blank space on the borders for a better read. Double-check the ouput - this program is NOT perfect.</p>
 
   <div class="upload-area">
     <label for="imageInput" class="upload-button">Choose Image</label>
